--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -1,12 +1,9 @@
-FROM golang:1.24.3-alpine3.20 AS builder
+FROM golang:1.22.7-alpine3.20 as builder
 
 RUN apk update
 RUN apk add git openssh tzdata build-base python3 net-tools
 
 WORKDIR /app
-
-COPY .env.example .env
-COPY . .
 
 RUN go install github.com/buu700/gin@latest
 RUN go mod tidy
